# hess

./: .gitignore  HESS.cabal  LICENSE  README.md  Store.hs  hess.cabal  makefile
doc/: makefile  pipeline.dot
src/: Fetch.hs  MailScrape.hs  Main.hs  Monad.hs  Parser.hs  State.hs  StateMod.hs  Store.hs  TH.hs  Types.hs  UrlProcess.hs  UrlScrape.hs  Utils.hs  mailPattern.txt  scriptPattern.txt
