name:                HESS
version:             0.1.0.0
synopsis:            Email Scraping Web Spider
-- description:         
license:             MIT
license-file:        LICENSE
author:              Tom Sydney Kerckhove
maintainer:          syd.kerckhove@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable hess
  main-is:             Main.hs
  -- other-modules:       
  build-depends:       base                     >= 4.8  && < 4.9
                     , template-haskell         >= 2.10 && < 2.11
                     , bytestring               >= 0.10 && < 0.11
                     , time                     >= 1.5  && < 1.6
                     , async                    >= 2.0  && < 2.1
                     , stm                      >= 2.4  && < 2.5
                     , lens                     >= 4.13 && < 4.14
                     , mtl                      >= 2.2  && < 2.3
                     , containers               >= 0.5  && < 0.6
                     , http-client              >= 0.4  && < 0.5
                     , http-client-tls          >= 0.2  && < 0.3
                     , http-types               >= 0.8  && < 0.9
                     , network-uri              >= 2.6  && < 2.7
                     , pipes                    >= 4.1  && < 4.2
                     , pipes-concurrency        >= 2.0  && < 2.1
                     , email-validate           >= 2.1  && < 2.2
                     , regex-pcre-builtin       >= 0.94 && < 0.95
                     , tagsoup                  >= 0.13 && < 0.14
                     , optparse-applicative     >= 0.11 && < 0.12
  ghc-options:        -Wall
                      -fwarn-unused-imports
                      -fwarn-incomplete-patterns
                      -fno-warn-unused-do-bind
                      -fno-warn-name-shadowing
                      -fno-warn-orphans
                      -fforce-recomp
                      -threaded
                      -rtsopts
                      -with-rtsopts=-N
  hs-source-dirs:      src
  default-language:    Haskell2010
