name:                HESS
version:             0.0.0.0
synopsis:            Email Scraping Web Spider
license:             MIT
license-file:        LICENSE
author:              Tom Sydney Kerckhove
maintainer:          syd.kerckhove@gmail.com
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable hess
  main-is:             Main.hs
  build-depends:       
      base                 >= 4.9  && < 5
    , bytestring           >= 0.10 && < 0.11
    , template-haskell     >= 2.11 && < 2.12
    , time                 >= 1.5  && < 1.8
    , async                >= 2.0  && < 2.2
    , stm                  >= 2.4  && < 2.5
    , mtl                  >= 2.2  && < 2.3
    , containers           >= 0.5  && < 0.6
    , http-client          >= 0.4  && < 0.5
    , http-client-tls      >= 0.2  && < 0.3
    , http-types           >= 0.8  && < 0.10
    , network-uri          >= 2.6  && < 2.7
    , pipes                >= 4.1  && < 4.2
    , pipes-concurrency    >= 2.0  && < 2.1
    , email-validate       >= 2.1  && < 2.3
    , regex-pcre-builtin   >= 0.94 && < 0.95
    , tagsoup              >= 0.13 && < 0.15
    , optparse-applicative >= 0.11 && < 0.14
  other-modules:
    Fetch
    MailScrape
    Monad
    Parser
    Store
    TH
    Types
    UrlProcess
    UrlScrape
    Utils
  ghc-options:        -Wall
                      -fwarn-unused-imports
                      -fwarn-incomplete-patterns
                      -fno-warn-unused-do-bind
                      -fno-warn-name-shadowing
                      -fno-warn-orphans
                      -fforce-recomp
                      -threaded
                      -rtsopts
                      -with-rtsopts=-N
  hs-source-dirs:      src
  default-language:    Haskell2010
